added all social profiles

--- a/index.html
+++ b/index.html
@@ -1,76 +1,46 @@
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="static/style.css">
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <title>Ishan Lakhwani | Software Developer, Electronics Engineer and Entrepreneur</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript" ></script>
+    <link rel=icon href=img/favicon.png> 
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 </head>
+
 <body>
-
-<div class="sidenav">
-  <a href="index.html">About</a>
-  <a href="exp.html">Experience</a>
-  <a href="projects.html">Projects</a>
-  <a href="courses.html">Courses</a>
-  <a href="contact.html">Contact</a>
-</div>
-
-<div class="main">
-  <p font-size="10"><strong>Certificate of 1st runner up</strong> - Techstars Startup Weekend</p>
-  Created a company “Rapidcode” in just 54-hours, made working prototype and business plan and secured 1st runner up among 120 competitors.
-  <p><strong>Certificate of Honor</strong> - Nirma University</p>
-  Felicitation on the 23rd Foundation day of Nirma university of being the only student securing incubation in Gujarat University Startup and Entrepreneurship Council
-  <p><strong>Certificate of Recognition</strong> - The Red Brick Summit(IIM - Ahmedabad)</p>
-  For being selected in the events Exchequer and Trade-o-mania 2018
-
-  <p><strong>Project Manager</strong> - Techstars Startup Weekend
-  February 2017 - May 2017,  Ahmedabad
-  Organised a continuous 54-hours event powered by Google for Entrepreneurs.
-  Startup enthusiasts pitch ideas for new startup ideas, form teams and work to develop a prototype and business plan within the course of 3 days.
-  Eliminated discrepancies by carefully reviewing budgets to prevent overspending and adhere to financial objectives.
-  Technologies: SWOOP, Gmail</p>
-
-  <p><strong>Project Manager</strong> - Techstars Startup Weekend
-  February 2017 - May 2017,  Ahmedabad
-  Organised a continuous 54-hours event powered by Google for Entrepreneurs.
-  Startup enthusiasts pitch ideas for new startup ideas, form teams and work to develop a prototype and business plan within the course of 3 days.
-  Eliminated discrepancies by carefully reviewing budgets to prevent overspending and adhere to financial objectives.
-  Technologies: SWOOP, Gmail</p>
-
-  <p><strong>Project Manager</strong> - Techstars Startup Weekend
-  February 2017 - May 2017,  Ahmedabad
-  Organised a continuous 54-hours event powered by Google for Entrepreneurs.
-  Startup enthusiasts pitch ideas for new startup ideas, form teams and work to develop a prototype and business plan within the course of 3 days.
-  Eliminated discrepancies by carefully reviewing budgets to prevent overspending and adhere to financial objectives.
-  Technologies: SWOOP, Gmail</p>
-
-  <p><strong>Project Manager</strong> - Techstars Startup Weekend
-  February 2017 - May 2017,  Ahmedabad
-  Organised a continuous 54-hours event powered by Google for Entrepreneurs.
-  Startup enthusiasts pitch ideas for new startup ideas, form teams and work to develop a prototype and business plan within the course of 3 days.
-  Eliminated discrepancies by carefully reviewing budgets to prevent overspending and adhere to financial objectives.
-  Technologies: SWOOP, Gmail</p>
-  <p><strong>Project Manager</strong> - Techstars Startup Weekend
-  February 2017 - May 2017,  Ahmedabad
-  Organised a continuous 54-hours event powered by Google for Entrepreneurs.
-  Startup enthusiasts pitch ideas for new startup ideas, form teams and work to develop a prototype and business plan within the course of 3 days.
-  Eliminated discrepancies by carefully reviewing budgets to prevent overspending and adhere to financial objectives.
-  Technologies: SWOOP, Gmail</p>
-
-  <p><strong>Project Manager</strong> - Techstars Startup Weekend
-  February 2017 - May 2017,  Ahmedabad
-  Organised a continuous 54-hours event powered by Google for Entrepreneurs.
-  Startup enthusiasts pitch ideas for new startup ideas, form teams and work to develop a prototype and business plan within the course of 3 days.
-  Eliminated discrepancies by carefully reviewing budgets to prevent overspending and adhere to financial objectives.
-  Technologies: SWOOP, Gmail</p>
-
-  <p><strong>Project Manager</strong> - Techstars Startup Weekend
-  February 2017 - May 2017,  Ahmedabad
-  Organised a continuous 54-hours event powered by Google for Entrepreneurs.
-  Startup enthusiasts pitch ideas for new startup ideas, form teams and work to develop a prototype and business plan within the course of 3 days.
-  Eliminated discrepancies by carefully reviewing budgets to prevent overspending and adhere to financial objectives.
-  Technologies: SWOOP, Gmail</p>
-
-</div>
-
+    
+    <script type="text/javascript">
+       $(function() {
+        var images = ['background1.jpg', 'background2.jpg', 'background3.jpg', 'background4.jpg', 'background5.jpg', 'background6.jpg', 'background7.jpg', 'background8.jpg'];       
+        $('#header').css({'background-image': 'url(img/' + images[Math.floor(Math.random() * images.length)] + ')'});
+       });
+    </script>
+    <header id="header" class="header">
+        <div class="text-vertical-center">
+            <h1>Ishan Lakhwani</h1>
+            <h3>Software Developer, Electronics Engineer and Entrepreneur</h3>
+            <br>
+            <a href="mailto:ishanlakhwani@hotmail.com"><img src="img/email.svg" height="40" width="40"></a>&nbsp &nbsp
+            <a href="https://bluntbrain.github.io/resume.pdf" target="_blank"><img src="img/resume.svg" height="36" width="36"></a>&nbsp &nbsp
+            <a href="https://github.com/bluntbrain" target="_blank"><img src="img/github.svg" height="38" width="38"></a>&nbsp &nbsp
+            <a href="https://twitter.com/implex_ishan" target="_blank"><img src="img/twitter.svg" height="34" width="34"></a>&nbsp &nbsp
+            <a href="https://stackoverflow.com/users/9045462/ishan-lakhwani?tab=profile" target="_blank"><img src="img/stackoverflow.svg" height="34" width="34"></a>
+            &nbsp &nbsp
+            <a href="https://www.linkedin.com/in/ishanl/" target="_blank"><img src="img/linkedin.svg" height="34" width="34"></a>&nbsp &nbsp
+            <a href="https://medium.com/@ishan7023254133" target="_blank"><img src="img/medium.svg" height="40" width="40"></a>
+        </div>
+    </header>
 </body>
+
 </html>
