--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
             <a href="mailto:ishanlakhwani@hotmail.com"><img src="img/email.svg" height="40" width="40"></a>&nbsp &nbsp
             <a href="https://bluntbrain.github.io/resume.pdf" target="_blank"><img src="img/resume.svg" height="36" width="36"></a>&nbsp &nbsp
             <a href="https://github.com/bluntbrain" target="_blank"><img src="img/github.svg" height="38" width="38"></a>&nbsp &nbsp
+            <a href="./certificates.html" class="btn btn-success" role="button" aria-pressed="true">Certificates</a>
+
             <a href="https://twitter.com/implex_ishan" target="_blank"><img src="img/twitter.svg" height="34" width="34"></a>&nbsp &nbsp
             <a href="https://stackoverflow.com/users/9045462/ishan-lakhwani?tab=profile" target="_blank"><img src="img/stackoverflow.svg" height="34" width="34"></a>
             &nbsp &nbsp
             <a href="https://www.linkedin.com/in/ishanl/" target="_blank"><img src="img/linkedin.svg" height="34" width="34"></a>&nbsp &nbsp
-            <a href="https://medium.com/@ishan7023254133" target="_blank"><img src="img/medium.svg" height="40" width="40"></a>
+            <!-- <a href="https://medium.com/@ishan7023254133" target="_blank"><img src="img/medium.svg" height="40" width="40"></a> -->
         </div>
     </header>
 </body>
