added android development certificate

--- a/certificates.html
+++ b/certificates.html
@@ -21,7 +21,19 @@
             <div class="container">
                     <div class="card-columns">
                         <div class="card">
-                            <img class="card-img-top img-fluid" src="./img/core_java.png" alt="Card image cap">
+                            <img class="card-img-top img-fluid" src="./img/android_internshala.png" alt="Card image cap">
+                            <div class="card-body">
+                                <h4 class="card-title">Android App Development - Internshala</h4>
+                                <p class="card-text">
+                                    Started with Android Studio, jumped into Kotlin. 
+                                    Learnt about Picasso, ROOM library and SQLite.
+                                    Studied about Activity and Fragment lifecycles.
+                                    Used Volley for fetching data from the internet. Made several projects using Kotlin.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img class="card-img-top img-fluid" src="./img/" alt="Card image cap">
                             <div class="card-body">
                                 <h4 class="card-title">Core Java Training - Internshala</h4>
                                 <p class="card-text">Completed this training in March 2020. Learnt concepts like Control Statements, Java Object Class,
