added trading certificate

--- a/certificates.html
+++ b/certificates.html
@@ -33,7 +33,7 @@
                             </div>
                         </div>
                         <div class="card">
-                            <img class="card-img-top img-fluid" src="./img/" alt="Card image cap">
+                            <img class="card-img-top img-fluid" src="./img/core_java.png" alt="Card image cap">
                             <div class="card-body">
                                 <h4 class="card-title">Core Java Training - Internshala</h4>
                                 <p class="card-text">Completed this training in March 2020. Learnt concepts like Control Statements, Java Object Class,
@@ -43,6 +43,13 @@
                                         Java Encapsulation,
                                         Java Array,
                                         Java OOPs Misc</p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img class="card-img-top img-fluid" src="./img/stock.png" alt="Card image cap">
+                            <div class="card-body">
+                                <h4 class="card-title">Beginers Trading Certificate - Internshala</h4>
+                                <p class="card-text">Did this training out of intrest and undestood about the basic of stock investing, different financial ratios and virtual investing. Also, studied balance sheet of companies using fundamental analysis and technical analysis.</p>
                             </div>
                         </div>
                         <div class="card">
