format changes in policy

--- a/indiscan.html
+++ b/indiscan.html
@@ -233,20 +233,20 @@
                 <div class="card">
                     <!-- <img class="card-img-top img-fluid" src="./img/perpule.png" alt="Card image cap"> -->
                     <div class="card-body" >
-                        Open Source Credits
-
-This application uses Open Source components. You can find the source code of their open source projects along 
-with license information below. We acknowledge and are grateful to these develpers and designers for their 
-contribution to open source.
-
-ScanLibrary
-Project code: https://github.com/jhansireddy/AndroidScannerDemo
-Copyright (c) 2016 Jhansi Karee
-License: (MIT) https://github.com/jhansireddy/AndroidScannerDemo/blob/master/License.txt
-
-FreePik
-Website
-File : <a href="https://www.freepik.com/free-photos-vectors/folder">Folder vector created by stories - www.freepik.com</a>
+                        <strong>Open Source Credits</strong>
+<br>
+This application uses Open Source components. You can find the source code of their open source projects along<br>
+with license information below. We acknowledge and are grateful to these develpers and designers for their <br>
+contribution to open source.<br>
+<br>
+ScanLibrary<br>
+Project code: https://github.com/jhansireddy/AndroidScannerDemo<br>
+Copyright (c) 2016 Jhansi Karee<br>
+License: (MIT) https://github.com/jhansireddy/AndroidScannerDemo/blob/master/License.txt<br>
+<br>
+FreePik<br>
+Website<br>
+File : <a href="https://www.freepik.com/free-photos-vectors/folder">Folder vector created by stories - www.freepik.com</a><br>
 File : <a href="https://www.freepik.com/free-photos-vectors/cloud">Cloud vector created by stories - www.freepik.com</a>
                     </div>
                 
