--- a/index.html
+++ b/index.html
@@ -152,8 +152,13 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
                 <img src="./img/streamshiksha.jpg" width="50%" height="50%" style="float: left;">
                   <h5 class="w3-opacity"><b>Stream Shiksha</b></h5>
                   <h6 class="w3-text-brown"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Live stream Android App</h6>
-                  <p>Indigenous Indian mobile application for scanning images and documents using the phone camera or gallery. Simple and user-friendly interface with native technology to enable quick file transfers as PDF and images. Use it to scan documents, photos, id cards, receipts, bills, business cards, whiteboards and other documents. No watermark on scanned images (.jpeg) makes it perfect for professional use in offices and the education sector on a day-to-day basis.
-                        Get sharp images and instantly convert to desired format. Compatible with latest Android software update.</p>
+                  <p>Stream Shiksha is an upcoming and innovative solution to today’s needs of online education. Keeping in
+                    mind the guidelines issued by MyGov India: App Innovation Challenge, we have created a platform for
+                    easy access to online teaching and learning with various features that set us apart. Our motive is to
+                    make a smooth transition from class-based learning to app-based learning by keeping the essential
+                    elements of a class intact in this time of COVID-19 pandemic and beyond. As studies take a leap from
+                    chalks and boards to screens and undo buttons, the requirement for mobile phones applications is
+                    highly anticipated.</p>
                   <a href="https://play.google.com/store/apps/details?id=com.lavish.streamindia.livevideopublisher"><img src="./img/googleplay.png" width="30%" height="30%"></a>
                   <div class="container">
                         <a href="./documents/user_manual_indiscan.pdf"><button class="w3-btn">App User Manual</button></a>
