--- a/certificates.html
+++ b/certificates.html
@@ -21,6 +21,25 @@
             <div class="container">
                     <div class="card-columns">
                         <div class="card">
+                            <img class="card-img-top img-fluid" src="./img/react_basics.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <h4 class="card-title">React Native + Hooks</h4>
+                                <p class="card-text">
+                                    Learnt about React Native App Development and Debugging.
+                                    <ul>
+                                        <li>Redux</li>
+                                        <li>React Navigation</li>
+                                        <li>State management and components</li>
+                                        <li>Data API Sync</li>
+                                        <li>In-App authentication</li>
+                                        <li>Firebase as a Data Store</li>
+                                        <li>Building a Custom Express Api</li>
+                                    </ul>
+                                </p>
+                            </div>
+                        </div>
+                        
+                        <div class="card">
                             <img class="card-img-top img-fluid" src="./img/android_internshala.png" alt="Card image cap">
                             <div class="card-body">
                                 <h4 class="card-title">Android App Development - Internshala</h4>
@@ -149,6 +168,24 @@
                             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                         </div> -->
+                        <div class="card">
+                                <img class="card-img-top img-fluid" src="./img/react_basics.jpg" alt="Card image cap">
+                                <div class="card-body">
+                                    <h4 class="card-title">React Native : Advanced</h4>
+                                    <p class="card-text">
+                                        Worked on advanced React Native concepts such as:
+                                        <ul>
+                                            <li>Animations</li>
+                                            <li>handling Gestures</li>
+                                            <li>Component Reuseability</li>
+                                            <li>One Time passwrod authentication</li>
+                                            <li>Map Views </li>
+                                            <li>Offline data Persistance</li>
+                                            <li>Push Notifications</li>
+                                        </ul>
+                                    </p>
+                                </div>
+                            </div>
                         <div class="card">
                                 <img class="card-img-top img-fluid" src="./img/startupw.png" alt="Card image cap">
                                 <div class="card-body">
