added figma certi

--- a/certificates.html
+++ b/certificates.html
@@ -89,6 +89,13 @@
                             </blockquote>
                         </div> -->
                         <div class="card">
+                            <img class="card-img-top img-fluid" src="./img/figma.png" alt="Card image cap">
+                            <div class="card-body">
+                                <h4 class="card-title">UI/UX Design with Figma - Internshala</h4>
+                                <p class="card-text">Learnt about UI/UX design using the Figma software and dedigned a Finance App to showcase some design skills.</p>
+                            </div>
+                        </div>
+                        <div class="card">
                             <img class="card-img-top img-fluid" src="./img/perpule.png" alt="Card image cap">
                             <div class="card-body">
                                 <h4 class="card-title">Product development Intern - Perpule (Bangalore)</h4>
@@ -205,6 +212,7 @@
                                     <p class="card-text">Created a company with prototypein 54 hours.</p>
                                 </div>
                             </div>
+                            
                         <!-- <div class="card card-body text-right">
                             <blockquote class="card-blockquote">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
