--- a/certificates.html
+++ b/certificates.html
@@ -176,7 +176,7 @@
                             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                         </div> -->
                         <div class="card">
-                                <img class="card-img-top img-fluid" src="./img/react_basics.jpg" alt="Card image cap">
+                                <img class="card-img-top img-fluid" src="./img/react_adv.jpg" alt="Card image cap">
                                 <div class="card-body">
                                     <h4 class="card-title">React Native : Advanced</h4>
                                     <p class="card-text">
